force-app/main/default/objects/Customer_Import_Settings__c/Customer_Import_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Customer_Import_Settings</label>
</CustomObject>