force-app/main/default/objects/Customer_Import_Settings__c/fields/Chunk_Size__c.field-meta.xml
<CustomField>
    <fullName>Chunk_Size__c</fullName>
    <label>Chunk_Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>