force-app/main/default/objects/Customer_Import_Settings__c/fields/Customer_Import_Report__c.field-meta.xml
<CustomField>
    <fullName>Customer_Import_Report__c</fullName>
    <label>Customer Import Report</label>
    <length>19</length>
    <type>Text</type>
</CustomField>