force-app/main/default/objects/Customer_Import_Settings__c/fields/Filter_Email_Domain__c.field-meta.xml
<CustomField>
    <fullName>Filter_Email_Domain__c</fullName>
    <label>Filter Email Domain</label>
    <length>15</length>
    <type>Text</type>
</CustomField>